tests/snapshots/test_errors__broken_superseded_check.snap
---
source: tests/error_tests/rfc_clause_cases/check.rs
expression: snapshot
---
$ govctl check
Checked:
  1 RFCs
  2 clauses
  0 ADRs
  0 work items
  0 verification guards
  0 conformance cases

error[E0206]: Clause 'C-OLD' superseded by unknown clause 'C-NONEXISTENT' (gov/rfc/RFC-0001/clauses/C-OLD.toml)
exit: 1
