tests/snapshots/test_errors__invalid_clause_toml_wire_missing_text.snap
---
source: tests/test_errors.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl check
error[E0201]: clause does not match schema 'clause.schema.json':
  - "text" is a required property (/private<TEMPDIR>/gov/rfc/RFC-0001/clauses/C-NOTEXT.toml)
exit: 1
