tests/snapshots/test_errors__invalid_rfc_toml_wire_unknown_field.snap
---
source: tests/test_errors.rs
expression: "normalize_output(&output, temp_dir.path(), &date)"
---
$ govctl check
error[E0101]: RFC does not match schema 'rfc.schema.json':
  - Additional properties are not allowed ('unexpected' was unexpected) (/private<TEMPDIR>/gov/rfc/RFC-0001/rfc.toml)
exit: 1
