tests/snapshots/test_errors__invalid_transition_check.snap
---
source: tests/error_tests/rfc_clause_cases/check.rs
expression: snapshot
---
$ govctl check
Checked:
  1 RFCs
  1 clauses
  0 ADRs
  0 work items
  0 verification guards
  0 conformance cases

error[E0104]: Cannot have status=draft with phase=stable (gov/rfc/RFC-0001/rfc.toml)
exit: 1
