tests/snapshots/test_errors__legacy_flat_clause_toml_accepted.snap
---
source: tests/error_tests/rfc_clause_cases/wire_format.rs
expression: snapshot
---
$ govctl check
Checked:
  1 RFCs
  1 clauses
  0 ADRs
  0 work items
  0 verification guards

warning[W0102]: Clause 'C-FLAT' has no 'since' version (hint: it will be set automatically by `govctl rfc bump` or `govctl rfc finalize`) (gov/rfc/RFC-0001/clauses/C-FLAT.toml)
exit: 0
