tests/snapshots/test_errors__valid_clause_toml_wire_format.snap
---
source: tests/error_tests/rfc_clause_cases/wire_format.rs
expression: snapshot
---
$ govctl check
Checked:
  1 RFCs
  1 clauses
  0 ADRs
  0 work items
  0 verification guards
  0 conformance cases

✓ All checks passed
exit: 0
